--- a/src/components/LettersCalculator/index.css
+++ b/src/components/LettersCalculator/index.css
@@ -1,49 +1,139 @@
-.container {
-  background-image: linear-gradient(to right, #1d976c, #93f9b9);
-  background-size: cover;
-  height: 100vh;
+.app-container {
   display: flex;
-  flex-direction: row;
   justify-content: center;
   align-items: center;
+  background-image: linear-gradient(to right, #1d976c 0%, #93f9b9 107%);
+  height: 100vh;
 }
-.cal-container {
+
+.letters-calculator-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 90%;
+}
+
+@media screen and (min-width: 992px) {
+  .letters-calculator-container {
+    flex-direction: row;
+  }
+}
+
+.calculator-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  order: 1;
+}
+
+@media screen and (min-width: 992px) {
+  .calculator-container {
+    align-items: flex-start;
+    order: 0;
+  }
+}
+
+.heading {
+  text-align: center;
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 24px;
+  font-weight: bold;
+}
+
+@media screen and (min-width: 768px) {
+  .heading {
+    font-size: 46px;
+  }
+}
+
+@media screen and (min-width: 992px) {
+  .heading {
+    text-align: start;
+    font-size: 46px;
+  }
+}
+
+.input-phrase-container {
   display: flex;
   flex-direction: column;
 }
-.heading {
-  color: white;
-  font-family: roboto;
-  font-size: 20px;
-  font-weight: 700;
-}
-.para {
-  color: white;
-  font-family: roboto;
-  font-size: 14px;
-}
-.data {
-  color: black;
-  font-family: roboto;
-  font-size: 14px;
-  outline: none;
-}
-.output-container {
-  margin: 30px;
-  background-color: white;
-  border-radius: 5px;
-}
-.letter {
-  color: #1d976c;
-  font-family: roboto;
-  font-size: 14px;
+
+.label {
+  color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 12px;
+  font-weight: bold;
 }
 
-.pic-container {
-  width: 500px;
-  height: 500px;
+.letters-input {
+  color: #ffffff;
+  background-color: transparent;
+  font-family: 'Roboto';
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid #e4e7eb;
+  border-radius: 4px;
+  margin-top: 8px;
+  padding-top: 8px;
+  padding-right: 12px;
+  padding-bottom: 8px;
+  padding-left: 12px;
+  outline: none;
 }
-.pic {
-  max-width: 500px;
-  max-height: 500px;
+
+@media screen and (min-width: 768px) {
+  .letters-input {
+    width: 350px;
+  }
+}
+
+.letters-count {
+  align-self: center;
+  color: #219a6f;
+  background-color: #ffffff;
+  font-family: 'Roboto';
+  font-size: 24px;
+  font-weight: bold;
+  border-radius: 12px;
+  margin-top: 32px;
+  padding: 18px;
+  padding-right: 24px;
+  padding-left: 24px;
+}
+
+@media screen and (min-width: 992px) {
+  .letters-count {
+    align-self: start;
+    padding: 24px;
+    padding-right: 32px;
+    padding-left: 32px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .letters-count {
+    padding: 30px;
+    padding-right: 38px;
+    padding-left: 38px;
+  }
+}
+
+.letters-calculator-image {
+  width: 100%;
+  order: 0;
+}
+
+@media screen and (min-width: 992px) {
+  .letters-calculator-image {
+    width: 550px;
+    order: 1;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .letters-calculator-image {
+    width: 700px;
+  }
 }
